Construindo sistema de observação de uso de propriedades.
Objetos de tokens e métodos auxiliares precisam que seus métodos sejam observados e identificado se há alguma propriedade declarada e não utilizada.

--- a/Testscreen.html
+++ b/Testscreen.html
@@ -9,6 +9,7 @@
     
 <body>
     <script type="module" src="Testflex.js"></script>
+    <script type="module" src="internal-test.js"></script>
 </body>
     
 </html>
