--- a/Testscreen.html
+++ b/Testscreen.html
@@ -8,6 +8,11 @@
 </head>
     
 <body>
+    <div id="testflex-app">
+        <!-- Injeção da tabela de resultados dos testes -->
+         
+    </div>
+
     <script type="module" src="Testflex.js"></script>
     <script type="module" src="internal-test.js"></script>
 </body>
